--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -42,14 +42,28 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Actividad.cs" />
+    <Compile Include="ActividadCurricular.cs" />
+    <Compile Include="ActividadPractica.cs" />
     <Compile Include="Administrador.cs" />
+    <Compile Include="Alcaide.cs" />
+    <Compile Include="Cargo.cs" />
+    <Compile Include="Curso.cs" />
+    <Compile Include="CursoDistancia.cs" />
+    <Compile Include="CursoInterno.cs" />
     <Compile Include="Docente.cs" />
+    <Compile Include="Empleado.cs" />
+    <Compile Include="EquipoTrabajo.cs" />
     <Compile Include="Expediente.cs" />
+    <Compile Include="GrupoActividad.cs" />
+    <Compile Include="Horario.cs" />
     <Compile Include="Inscripcion.cs" />
+    <Compile Include="Jornada.cs" />
     <Compile Include="Persona.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Recluso.cs" />
-    <Compile Include="Trabajador.cs" />
+    <Compile Include="Taller.cs" />
+    <Compile Include="Trabajo.cs" />
+    <Compile Include="Usuario.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
